--- a/index copy.html
+++ b/index copy.html
@@ -96,11 +96,8 @@
 					<div class="row">
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
-								<!-- <span class="lnr lnr-pie-chart"></span> -->
-								<a href="https://selecteev.io" target="_blank">
-									<img src="img/home/selecteev.png" style="max-width:150px;max-height:40px" />
-									<h4>Selecteev</h4>
-								</a>
+								<span class="lnr lnr-pie-chart"></span>
+								<a href="https://selecteev.io" target="_blank"><h4>Selecteev</h4></a>
 								<p>
 									Projects selection platform used by multiple incubators and accelerators around the world
 								</p>
@@ -109,9 +106,8 @@
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
-								<a href="https://easystripeinvoices.io" target="_blank">
 								<span class="lnr lnr-laptop-phone"></span>
-								<h4>Easy Stripe Invoices</h4></a>
+								<a href="https://easystripeinvoices.io" target="_blank"><h4>Easy Stripe Invoices</h4></a>
 								<p>
 									Startups always have to build a part of their invoicing system when plugging in to Stripe. ESI generates beautiful invoices automatically from Stripe.
 								</p>
@@ -120,8 +116,7 @@
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
-								<!-- <span class="lnr lnr-camera"></span> -->
-								<img src="https://cdn-images-1.medium.com/max/92/1*JSipXIzhHlgJQmMifc7Fig@2x.png" style="max-width:150px;max-height:40px" />
+								<span class="lnr lnr-camera"></span>
 								<a href="https://cto.pizza" target="_blank"><h4>CTO Pizza</h4></a>
 								<p>
 									A series of interviews of tech leaders from all team's sizes about their daily challenges. Watch out for the next event near you !
@@ -131,11 +126,8 @@
 						</div>
 						<div class="col-lg-5 offset-lg-1 col-md-6">
 							<div class="single-services">
-							<!-- 	<span class="lnr lnr-camera-video"></span> -->
-								<a href="https://youtube.com/3minutespourcomprendre" target="_blank">
-									<img src="img/home/3mpc.jpg" class="img-circle" style="max-width:150px;max-height:40px; border-radius: 50%;" />
-									<h4>3 minutes pour comprendre</h4>
-								</a>
+								<span class="lnr lnr-camera-video"></span>
+								<a href="https://youtube.com/3minutespourcomprendre" target="_blank"><h4>3 minutes pour comprendre</h4></a>
 								<p>
 									Youtube channel that vulgarises new technologies and questions people ask themselves in general, in 3 minutes long videos.
 								</p>
@@ -144,9 +136,8 @@
 						</div>
 						<div class="col-lg-5 col-md-6">
 							<div class="single-services">
-								<a href="alban.html">
 								<span class="lnr lnr-user"></span>
-								<h4>CTO as a Service</h4></a>
+								<a href="#"><h4>CTO as a Service</h4></a>
 								<p>
 									We help companies grow their tech team and product by managing developers and helping find the right full-time tech lead you need.
 								</p>
@@ -359,7 +350,95 @@
 		        </div>
 		    </section>
 		    <!-- End testimonial Area -->
-			
+		
+			<!-- Start price Area -->
+			<section class="price-area section-gap">
+				<div class="container">
+					<div class="row d-flex justify-content-center">
+						<div class="menu-content pb-70 col-lg-8">
+							<div class="title text-center">
+								<h1 class="mb-10">Choose Your Plan</h1>
+								<p>When someone does something that they know that they shouldn’t do, did they.</p>
+							</div>
+						</div>
+					</div>					
+					<div class="row">
+						<div class="col-lg-3 col-md-6 single-price">
+							<div class="top-part">
+								<h1 class="package-no">01</h1>
+								<h4>Economy</h4>
+								<p class="mt-10">For the individuals</p>
+							</div>
+							<div class="package-list">
+								<ul>
+									<li>Secure Online Transfer</li>
+									<li>Unlimited Styles for interface</li>
+									<li>Reliable Customer Service</li>
+								</ul>
+							</div>
+							<div class="bottom-part">
+								<h1>£199.00</h1>
+								<a class="price-btn text-uppercase" href="#">Buy Now</a>
+							</div>
+						</div>
+						<div class="col-lg-3 col-md-6 single-price">
+							<div class="top-part">
+								<h1 class="package-no">02</h1>
+								<h4>Business</h4>
+								<p class="mt-10">For the individuals</p>
+							</div>
+							<div class="package-list">
+								<ul>
+									<li>Secure Online Transfer</li>
+									<li>Unlimited Styles for interface</li>
+									<li>Reliable Customer Service</li>
+								</ul>
+							</div>
+							<div class="bottom-part">
+								<h1>£299.00</h1>
+								<a class="price-btn text-uppercase" href="#">Buy Now</a>
+							</div>
+						</div>
+						<div class="col-lg-3 col-md-6 single-price">
+							<div class="top-part">
+								<h1 class="package-no">03</h1>
+								<h4>Premium</h4>
+								<p class="mt-10">For the individuals</p>
+							</div>
+							<div class="package-list">
+								<ul>
+									<li>Secure Online Transfer</li>
+									<li>Unlimited Styles for interface</li>
+									<li>Reliable Customer Service</li>
+								</ul>
+							</div>
+							<div class="bottom-part">
+								<h1>£399.00</h1>
+								<a class="price-btn text-uppercase" href="#">Buy Now</a>
+							</div>
+						</div>
+						<div class="col-lg-3 col-md-6 single-price">
+							<div class="top-part">
+								<h1 class="package-no">04</h1>
+								<h4>Exclusive</h4>
+								<p class="mt-10">For the individuals</p>
+							</div>
+							<div class="package-list">
+								<ul>
+									<li>Secure Online Transfer</li>
+									<li>Unlimited Styles for interface</li>
+									<li>Reliable Customer Service</li>
+								</ul>
+							</div>
+							<div class="bottom-part">
+								<h1>£499.00</h1>
+								<a class="price-btn text-uppercase" href="#">Buy Now</a>
+							</div>
+						</div>																		
+					</div>
+				</div>	
+			</section>
+			<!-- End price Area -->			
 	
 			<!-- Start recent-blog Area -->
 			<section class="recent-blog-area section-gap">
