--- a/alban.html
+++ b/alban.html
@@ -61,7 +61,7 @@
 				          </li>					                		
 			            </ul>
 			          </li>				 -->	          					          		          
-			          <li><a href="contact.html">Contact</a></li>
+			          <li><a href="javascript:;" onclick="alert('Send and email to alban @AT@ dyxo.io')">Contact</a></li>
 			        </ul>
 			      </nav><!-- #nav-menu-container -->		    		
 		    	</div>
@@ -100,9 +100,9 @@
 							<h1 class="text-uppercase">What is a CTO</h1>
 							<p>
 								A CTO needs to understand the business behind technology. </p>
-								<p>Having interviewed dozens of CTOs from horizons on <a href="http://cto.pizza" target="_blank">CTO.pizza</a> and managed myself a few different teams, I have seen best practices on teams of all sizes.
+								<p>Having interviewed dozens of CTOs from horizons on <a href="http://cto.pizza" target="_blank">CTO.pizza</a> and managed myself different teams, I have seen best practices on teams of all sizes. </p>
+								<p>I can help you grow your team or manage your current one.
 							</p>
-							<a href="#" class="primary-btn text-uppercase">View Full Details</a>
 						</div>
 					</div>
 				</div>	
@@ -113,10 +113,10 @@
 			<section class="services-area section-gap">
 				<div class="container">
 		            <div class="row d-flex justify-content-center">
-		                <div class="menu-content  col-lg-7">
+		                <div class="menu-content  col-lg-9">
 		                    <div class="title text-center">
 		                        <h1 class="mb-10">My Offered Services</h1>
-		                        <p>At about this time of year, some months after New Year’s resolutions have been made and kept, or made and neglected.</p>
+		                        <p>I help startups build their development team by interviewing potential CTOs and lead developers.</p>
 		                    </div>
 		                </div>
 		            </div>						
@@ -124,64 +124,38 @@
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
 								<span class="lnr lnr-pie-chart"></span>
-								<a href="#"><h4>Web Design</h4></a>
+								<a href="#"><h4>CTO Candidates Interviews</h4></a>
 								<p>
-									“It is not because things are difficult that we do not dare; it is because we do not dare that they are difficult.”
+									You are a new startup and don't know how to judge your potential CTO, which is one of the key pieces of your success.
 								</p>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
 								<span class="lnr lnr-laptop-phone"></span>
-								<a href="#"><h4>Web Development</h4></a>
+								<a href="#"><h4>Interimary CTO</h4></a>
 								<p>
-									If you are an entrepreneur, you know that your success cannot depend on the opinions of others. Like the wind, opinions.
+									Once your team starts growing with a few developers but nobody to manage them, I can take the lead of your team while helping you find your next CTO or tech lead.
 								</p>
 							</div>
 						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="single-services">
-								<span class="lnr lnr-camera"></span>
-								<a href="#"><h4>Photography</h4></a>
-								<p>
-									Do you want to be even more successful? Learn to love learning and growth. The more effort you put into improving your skills.
-								</p>
-							</div>	
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="single-services">
-								<span class="lnr lnr-picture"></span>
-								<a href="#"><h4>Clipping Path</h4></a>
-								<p>
-									Hypnosis quit smoking methods maintain caused quite a stir in the medical world over the last two decades. There is a lot of argument.
-								</p>
-							</div>
-						</div>
+
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
 								<span class="lnr lnr-tablet"></span>
-								<a href="#"><h4>Apps Interface</h4></a>
+								<a href="#"><h4>Managing remote teams</h4></a>
 								<p>
-									Do you sometimes have the feeling that you’re running into the same obstacles over and over again? Many of my conflicts.
+									A lot of startups use offshore or remote developers teams to go fast, but you need somebody inside that understand your product to manage them or you will likely hit a wall.
 								</p>
 							</div>
 						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="single-services">
-								<span class="lnr lnr-rocket"></span>
-								<a href="#"><h4>Graphic Design</h4></a>
-								<p>
-									You’ve heard the expression, “Just believe it and it will come.” Well, technically, that is true, however, ‘believing’ is not just thinking that.
-								</p>
-							</div>				
-						</div>														
 					</div>
 				</div>	
 			</section>
 			<!-- End services Area -->	
 
 			<!-- Start fact Area -->
-			<section class="facts-area section-gap" id="facts-area">
+			<!-- <section class="facts-area section-gap" id="facts-area">
 				<div class="container">				
 					<div class="row">
 						<div class="col-lg-3 col-md-6 single-fact">
@@ -202,11 +176,11 @@
 						</div>												
 					</div>
 				</div>	
-			</section>
+			</section> -->
 			<!-- end fact Area -->	
 
 			<!-- Start portfolio-area Area -->
-            <section class="portfolio-area section-gap" id="portfolio">
+           <!--  <section class="portfolio-area section-gap" id="portfolio">
                 <div class="container">
 		            <div class="row d-flex justify-content-center">
 		                <div class="menu-content pb-70 col-lg-8">
@@ -336,11 +310,11 @@
                     </div>
                     
                 </div>
-            </section>
+            </section> -->
             <!-- End portfolio-area Area -->	
 
 			<!-- Start testimonial Area -->
-		    <section class="testimonial-area section-gap">
+		   <!--  <section class="testimonial-area section-gap">
 		        <div class="container">
 		            <div class="row d-flex justify-content-center">
 		                <div class="menu-content pb-70 col-lg-8">
@@ -379,11 +353,11 @@
 		                </div>
 		            </div>
 		        </div>
-		    </section>
+		    </section> -->
 		    <!-- End testimonial Area -->
 		
 			<!-- Start price Area -->
-			<section class="price-area section-gap">
+			<!-- <section class="price-area section-gap">
 				<div class="container">
 					<div class="row d-flex justify-content-center">
 						<div class="menu-content pb-70 col-lg-8">
@@ -468,11 +442,11 @@
 						</div>																		
 					</div>
 				</div>	
-			</section>
+			</section> -->
 			<!-- End price Area -->			
 	
 			<!-- Start recent-blog Area -->
-			<section class="recent-blog-area section-gap">
+			<!-- <section class="recent-blog-area section-gap">
 				<div class="container">
 					<div class="row justify-content-center">
 						<div class="col-md-8 pb-30 header-text">
@@ -556,11 +530,11 @@
 												
 					</div>
 				</div>	
-			</section>
+			</section> -->
 			<!-- end recent-blog Area -->		
 
 		    <!-- Start brands Area -->
-		    <section class="brands-area">
+		   <!--  <section class="brands-area">
 		        <div class="container">
 		            <div class="brand-wrap">
 		                <div class="row align-items-center active-brand-carusel justify-content-start no-gutters">
@@ -582,7 +556,7 @@
 		                </div>
 		            </div>
 		        </div>
-		    </section>
+		    </section> -->
 		    <!-- End brands Area -->			
 
             <!-- start footer Area -->
