Offered services anchor

--- a/alban.html
+++ b/alban.html
@@ -81,7 +81,7 @@
 							</p>
 							<p>Take a look below at what I've done in the past below</p>
 
-							<a href="#" class="primary-btn text-uppercase">see how I can help you </a>
+							<a href="#services" class="primary-btn text-uppercase">see how I can help you </a>
 						</div>
 					</div>
 				</div>					
@@ -110,12 +110,12 @@
 			<!-- End home-about Area -->
 
 			<!-- Start services Area -->
-			<section class="services-area section-gap">
+			<section id="services" class="services-area section-gap">
 				<div class="container">
 		            <div class="row d-flex justify-content-center">
 		                <div class="menu-content  col-lg-9">
 		                    <div class="title text-center">
-		                        <h1 class="mb-10">My Offered Services</h1>
+		                        <h1  class="mb-10">Offered Services</h1>
 		                        <p>I help startups build their development team by interviewing potential CTOs and lead developers.</p>
 		                    </div>
 		                </div>
